set display with total value a position sticky with top 0 and fix copy overflowing the remove all products button

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,10 @@
 }
 
 .App {
-  background-color: #6495ED;
   position: relative;
+  display: flex;
+  justify-content: center;
+  background-color: #6495ED;
   padding: 1.12rem;
   width: 100%;
   height: 100%;
@@ -40,19 +42,22 @@ header p {
 }
 
 .display {
+  position: sticky;
+  top: 0;
   margin-top: 1.18rem;
   background-color: rgba(198, 239, 206, 78%);
-
+  
   display: flex;
   width: 22.31rem;
   height: 2.81rem;
   border-radius: 0.625rem;
-
+  
   align-items: center;
   justify-content: space-between;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-
+  
+  color: green;
   box-shadow: 1px 2px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -227,6 +232,7 @@ main h2 {
   justify-content: center;
   align-items: center;
   margin-top: 1em;
+  margin-bottom: 3.5rem;
 }
 
 .footer button {
